@@ -225,7 +225,9 @@ module Doric
 
     def initialize (doc={})
 
-      @h = doc.inject(self.class.defaults.dup) { |h, (k, v)| h[k.to_s] = v; h }
+      @h = doc.inject(Rufus::Json.dup(self.class.defaults)) { |h, (k, v)|
+        h[k.to_s] = v; h
+      }
       @h['doric_type'] = self.class.doric_type
     end
 
