@@ -20,6 +20,7 @@ class Can < Rufus::Doric::Model
   h_accessor :content, :default => 'tuna'
   h_accessor :colour
   property :sold, :default => false
+  property :customers, :default => []
 end
 
 
@@ -43,12 +44,29 @@ class UtModelDefaultTest < Test::Unit::TestCase
     Can.new(:serial => 'abcd', :content => 'anchovy').save!
     Can.new(:serial => 'efgh').save!
 
-    assert_equal({ 'content' => 'tuna', 'sold' => false }, Can.defaults)
+    assert_equal(
+      { 'content' => 'tuna', 'sold' => false, 'customers' => [] },
+      Can.defaults)
 
     assert_equal 'anchovy', Can.find('abcd').content
     assert_equal 'tuna', Can.find('efgh').content
     assert_equal nil, Can.find('abcd').colour
     assert_equal false, Can.find('abcd').sold
+  end
+
+  def test_default_is_not_shared_among_all_instances
+
+    anchovy = Can.new(:serial => 'anchovy', :content => 'anchovy')
+    tuna = Can.new(:serial => 'tuna', :content => 'tuna')
+
+    anchovy.customers << 'alice'
+    anchovy.customers << 'bob'
+
+    anchovy.save!
+    tuna.save!
+
+    assert_equal %w[ alice bob ], Can.find('anchovy').customers
+    assert_equal [], Can.find('tuna').customers
   end
 end
 
